fixed and added content

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">399 East 8th Street · Manhattan, NY 10009 · (917) 861-3258·
           <a href="mailto:guarneros@nyu.edu">guarneros@nyu.edu</a>
         </div>
-        <p class="lead mb-5">I am currently a student at New York University majoring in Computer Science and Mathematics (2020). I am interested in working in Data Science. I have experience working in Data Architecture, Software Engineering, and Full-Stack Development</p>
+        <p class="lead mb-5">I am currently a student at New York University majoring in Computer Science and Mathematics (2020). I am interested in working in Data Science. I have experience working in Data Science, Data Architecture, Software Engineering, and Full-Stack Development.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/andres-guarneros/">
             <i class="fab fa-linkedin-in"></i>
@@ -151,12 +151,40 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">New York University</h3>
-            <div class="subheading mb-3">Bachelor of Arts</div>
+            <div class="subheading mb-1">Major - College of Arts and Science</div>
             <div>Computer Science and Mathematics</div>
-            <div class="subheading mb-4">Minor</div>
-            <div>Computer Science and Mathematics</div>
+            <br> <div>Courses:</div>
+            <ul>
+              <li>Calculus I (Differential)</li>
+              <li>Calculus II (Integral)</li>
+              <li>Calculus III (Vector)</li>
+              <li>Linear Algebra</li>
+              <li>Real Analysis</li>
+              <li>Abstract Algebra</li>
+              <li>Discrete Math</li>
+              <li>Algorithms</li>
+              <li>Data Structures</li>
+              <li>Operating Systems</li>
+              <li>Computer System Organization</li>
+              <li>Advanced Algorithms</li>
+              <li>Full-Stack Web Development</li>
+              <li>Machine Learning</li>
+              <li>Mathematical Modeling</li>
+              <li>Numerical Analysis</li>
+            </ul>
             
-            <p>GPA: 3.13</p>
+            <br><div class="subheading mb-1">Minor - Stern</div>
+            <div>Business Studies</div>
+            <br><div>Courses:</div>
+            <ul>
+              <li>Financial Accounting</li>
+              <li>Microeconomics</li>
+              <li>Macroeconomics</li>
+              <li>Statistics for Business</li>
+              <li>Regression Modeling</li>
+              <li>Operations Management</li>
+            </ul>
+            
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2016 - May 2020</span>
@@ -167,7 +195,22 @@
           <div class="resume-content">
             <h3 class="mb-0">American School Foundation</h3>
             <div class="subheading mb-3">Mexico City</div>
-            <p>GPA: 3.4</p>
+            <div>Courses:</div>
+            <ul>
+              <li>AP English Language and Composition</li>
+              <li>AP Spanish Literature and Culture</li>
+              <li>AP Government and Politics</li>
+              <li>AP Microeconomics</li>
+              <li>AP Statistics</li>
+              <li>IB Mathematics HL</li>
+              <li>IB English Language and Literature HL</li>
+              <li>IB Spanish Language and Literature HL</li>
+              <li>IB Economics HL</li>
+              <li>IB Environmental Studies SL</li>
+            </ul>
+            <p>GPA: 3.4/4.0</p>
+            <p>ACT: 33/36</p>
+            <p>SAT Math II: 800</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2012 - May 2016</span>
@@ -247,7 +290,7 @@
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
         <p>I enjoy most of my time playing sports with my friends. I enjoy playing and competing in soccer, water-skiing, and padel. I also love puzzles and am a big fan of brainteasers.</p>
-        <p class="mb-0">I spend a large amount of my free time exploring the latest technology advancements in the machine-learning and mathematics. I am an avid self-learner and am constantly taking online courses such as CS50 (2013). <br><br>[CS50 was the first class I ever took online, and it ended up guiding me towards my passion.]</p>
+        <p class="mb-0">I spend a large amount of my free time exploring the latest technology advancements in the machine-learning and mathematics. I am an avid self-learner and am constantly taking online courses such as CS50 (2013). <br><br>[CS50 was the first class I ever took online. Through CS50, I discovered my passion.]</p>
       </div>
     </section>
 
